--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           </div>
         </div>
         <h3>
-          <a style="color: yellow" href="./assets/Akshit - WEB.pdf" download>Get My Resume</a>
+          <a style="color: yellow" href="./assets/Akshit Mehta WEB.pdf" download>Get My Resume</a>
         </h3>
       </div>
     </section>
